docs: Add JDK 24+ restricted method warning to troubleshooting guide
Document the --enable-native-access flag needed for JLine's JNI and FFM
terminal providers on JDK 24+, with examples for both classpath and
JPMS configurations.

Relates to #1067